--- a/pfs-ui/src/main/resources/static/styles/styles.css
+++ b/pfs-ui/src/main/resources/static/styles/styles.css
@@ -37,3 +37,35 @@
     font-size: 24px;
 }
 
+.accountsChartBox {
+    width: 50%;
+}
+
+.accountBox {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    position: relative;
+    align-items: center;
+    border: 1px black double;
+    background-color: white;
+}
+
+.accountBox img {
+    margin: 0 5px;
+}
+
+.accountBox a{
+    text-decoration: none;
+    margin: 0 30px 0 30px;
+}
+
+.accountBox label {
+    margin: 0 3px;
+}
+
+.amountBox {
+    position: absolute;
+    right: 5px;
+}
+
